@@ -74,7 +74,6 @@ CL_BUILTIN_STRLEN   dnl DEFS HAVE_BUILTIN_STRLEN
 AC_TYPE_LONG_LONG_INT dnl HAVE_LONG_LONG_INT
 dnl
 BOLD_MSG([checks for header files])
-CL_SHM_H       dnl DEFS HAVE_SYS_IPC_H, HAVE_SYS_SHM_H
 CL_TERM        dnl DEFS HAVE_TERMIOS_H, HAVE_TERMIO_H, ..., HAVE_SGTTY_H
 AC_PATH_XTRA   dnl sets variables X_CFLAGS, X_LIBS, X_EXTRA_LIBS, X_PRE_LIBS
 test "$ac_cv_lib_socket_connect" = yes && LIBS="$LIBS -lsocket"
@@ -125,7 +124,6 @@ CL_MMAP
 AC_CHECK_FUNCS([mincore]) dnl DEFS HAVE_MINCORE
 CL_MUNMAP   dnl DEFS HAVE_MUNMAP
 CL_MPROTECT dnl DEFS HAVE_MPROTECT, HAVE_WORKING_MPROTECT
-CL_SHM      dnl DEFS HAVE_SHM if shm works
 CL_DYNLOAD  dnl DEFS HAVE_DLOPEN
 gl_FCNTL_O_FLAGS dnl DEFS HAVE_WORKING_O_NOFOLLOW & HAVE_WORKING_O_NOATIME
 dnl
